# onenote-exporter

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT_GOALS.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh
.copilot/: README.md  copilot-config.json
.copilot/prompts/: exporter.prompt.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PROJECT_PLAN.md  README.md  WORKFLOW.md
example_prompts/: merge_with_novel_prompt.txt
podman/: INTEGRATION_SUMMARY.md  README.md  podman-compose.yml  setup-podman.bat  setup-podman.sh
scripts/: dev.sh  format.sh  setup_venv.sh
src/onenote_exporter/: __init__.py  auth.py  cli.py  config.py  db.py  exporter.py  graph.py  utils.py
tests/: conftest.py  test_db_incremental.py  test_exporter.py  test_graph.py  test_utils.py
